<resources>
    <string name="app_name">My First Application</string>

    <string name="tvSaludo"> Hola Mundo </string>
    <string name="tvUsuario">Usuario </string>
    <string name="tvPass">Contraseña </string>

    <string name="etUsuario">Ingrese Usuario </string>
    <string name="etPassHint">Ingrese Contraseña </string>

    <string name="btnIngresar">Ingresar</string>

    <string name="tvDatosUsuario">Datos del usuario </string>

</resources>